testsuite/poke.pkl/add-f64-diag-2.pk
/* { dg-do compile } */

var res
  = 1L .+ 1t; /* { dg-error "invalid operand .*" } */
